--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hoogeweg tuinen website</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm hosted with GitHub Pages</p>
 </body>
 </html>
