--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hoogeweg tuinen website</h1>
-<p>I'm hosted with GitHub Pages</p>
+<h1>Hoogeweg Tuinen Website</h1>
+<img src="2021_08_07_photo1.jpg" alt="Girl in a jacket" style="width:400;height:300px;"> 
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
