--- a/index.html
+++ b/index.html
@@ -85,12 +85,30 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
+      <h2>Plaatsing Dakkapel</h2>
+      <h5>11 Augustus, 2021</h5>
+	    <img src="./image/20210811_075312_web.jpg" alt="" style="width:400;height:300px;">
+      <img src="./image/20210811_085718_web.jpg" alt="" style="width:400;height:300px;">  
+	    <img src="./image/20210811_100633_web.jpg" alt="" style="width:400;height:300px;"> 
+      <p>Vandaag een spannende dag. De Dakkapel wordt geplaatst. Deze is naar ons ontwerp op maat gemaakt dus hopen dat alles past.</p>
+      <p>Om 07:30 stonden de mannen voor de deur en bij de koffie zat het gat al in het dak. We waren van te voren wel een beetje zenuwachtig. 
+        Je nieuwe huis zomaar kapot laten zagen doet toch wel iets. Gelukkig hadden we een mooie zonnige dag en ging alles voorspoedig.</p>
+      <img src="./image/20210811_130824_web.jpg" alt="" style="width:400;height:300px;"> 
+      <img src="./image/20210811_140037_web.jpg" alt="" style="width:400;height:300px;"> 
+      <img src="./image/20210811_145054_web.jpg" alt="" style="width:400;height:300px;"> 
+      <p>Na de middag waren alle verstevigingen in het dak aangebracht en kon de hijskraan beginnen met het plaatsen van de dakkapel. 
+         Na een tijdje voorzichtig manouvreren stond hij dan op zijn plek. Alles is stevig vastgezet en dichtgekit. Helaas is bij het transport een ruit 
+         gebroken waardoor we het nog even met een stuk hout moeten doen. Morgen begint de aannemer met het opmetselen van de de vrijgekomen stukken muur 
+         en het aftimmeren van de binnenkant. </p>
+
+    </div>    
+    <div class="card">
       <h2>Sloopwerk is voltooid</h2>
       <h5>10 Augustus, 2021</h5>
 	  <img src="./image/20210810_142251_web.jpg" alt="" style="width:400;height:300px;"> 
 	  <img src="./image/20210810_142217_web.jpg" alt="" style="width:400;height:300px;"> 
 
-      <p>Het sloopwerk is vooltooid. Een container van 10 kubieke meter vol met hout en een tweede container met puin is half vol</p>
+      <p>Het sloopwerk is voltooid. Een container van 10 kubieke meter vol met hout en een tweede container met puin is half vol</p>
       <p>Morgen, Woensdag 11 Augustus komt de dakkapel erop en twee dakramen in de kleine slaapkamers</p>
     </div>
 	<div class="card">
@@ -111,7 +129,7 @@ body {
 	  <img src="./image/2021_08_07_photo1_web.jpg" alt="" style="width:400;height:300px;"> 
       <p>Op onze tweede dag als bewoners van dit huis hebben we hulp gekregen van Liese en Ernst. Natuurlijk waren ook Yris, Hilko en Lotte van de partij.</p>
       <p>Het vakmanschap van Ernst en zijn gereedschap kwamen goed van pas. Aan het eind van de dag was al het grote breekwerk gedaan en konden we zelf 
-	  beginnen met het afvoeren van het puin</p>
+	  beginnen met het afvoeren van het puin.</p>
     </div>
 	<div class="card">
       <h2>De nieuwe eigenaren</h2>
@@ -122,7 +140,7 @@ body {
 	  <img src="./image/VoorSloop_Kamer1.jpg" alt="" style="width:400;height:300px;"> 
 	  <img src="./image/VoorSloop_kamer2.jpg" alt="" style="width:400;height:300px;"> 
 	  
-      <p>Sinds vrijdag 6 augustus zijn wij de gelukkige eigenaren van dit huis in Escharen. Het is een boerderij uit 1912 dit in 1984 omgebouwd 
+      <p>Sinds vrijdag 6 augustus zijn wij de gelukkige eigenaren van dit huis in Escharen. Het is een boerderij uit 1912 die in 1984 omgebouwd 
 	  is tot 2 wooneenheden waarvan wij de voormalige stal gaan bewonen. Achter en naast het huis ligt een prachtige tuin met vijver en zwembad.</p>
       <p>De komende weken gaan we verbouwen. Van de hele bovenverdieping gaan we de jaren-70 schrootjes verwijderen en wordt alles nieuw afgetimmerd. 
 	  De achterzijde van het huis krijgt een dakkapel over de badkamer en een slaapkamer. Tevens komen er een nieuwe badkamer en keuken in. </p>
