Updates van Liese
Meer fotos

--- a/index.html
+++ b/index.html
@@ -122,14 +122,20 @@ body {
     <div class="card">
       <h2>Veel handen maken licht werk</h2>
       <h5>7 Augustus, 2021</h5>
-	  <img src="./image/20210806_190051_web.jpg" alt="" style="width:400;height:300px;"> 
-	  <img src="./image/20210806_190111_web.jpg" alt="" style="width:400;height:300px;"> 
-	  <img src="./image/20210807_102156_web.jpg" alt="" style="width:400;height:300px;"> 
-	  <img src="./image/20210807_102207_web.jpg" alt="" style="width:400;height:300px;"> 
-	  <img src="./image/2021_08_07_photo1_web.jpg" alt="" style="width:400;height:300px;"> 
       <p>Op onze tweede dag als bewoners van dit huis hebben we hulp gekregen van Liese en Ernst. Natuurlijk waren ook Yris, Hilko en Lotte van de partij.</p>
       <p>Het vakmanschap van Ernst en zijn gereedschap kwamen goed van pas. Aan het eind van de dag was al het grote breekwerk gedaan en konden we zelf 
-	  beginnen met het afvoeren van het puin.</p>
+      beginnen met het afvoeren van het puin.</p>  
+	    <img src="./image/20210806_190051_web.jpg" alt="" style="width:400;height:300px;">
+      <img src="./image/WhatsApp Image 2021-08-11 at 08.29.50.jpeg" alt="" style="width:400;height:300px;">
+      <img src="./image/WhatsApp Image 2021-08-11 at 08.29.49(1).jpeg" alt="" style="width:400;height:300px;"> 
+	    <img src="./image/20210806_190111_web.jpg" alt="" style="width:400;height:300px;"> 
+	    <img src="./image/20210807_102156_web.jpg" alt="" style="width:400;height:300px;"> 
+	    <img src="./image/WhatsApp Image 2021-08-11 at 08.29.50(2).jpeg" alt="" style="width:400;height:300px;">
+      <img src="./image/WhatsApp Image 2021-08-11 at 08.29.50(3).jpeg" alt="" style="width:400;height:300px;"> 
+      <img src="./image/WhatsApp Image 2021-08-11 at 08.29.49(2).jpeg" alt="" style="width:400;height:300px;"> 
+      <img src="./image/WhatsApp Image 2021-08-11 at 08.29.49.jpeg" alt="" style="width:400;height:300px;"> 
+      <p>Na gedane arbeid is het goed toeven op het terras.</p>  
+	    <img src="./image/2021_08_07_photo1_web.jpg" alt="" style="width:400;height:300px;"> 
     </div>
 	<div class="card">
       <h2>De nieuwe eigenaren</h2>
