--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
+      <h2>Opening van het zwembad</h2>
+      <h5>12 Augustus, 2021</h5>
+	    <img src="./image/20210812_150146_web.jpg" alt="" style="width:400;height:300px;">
+      <p>Vandaag een rustige dag. De timmerman is begonnen alles op de bovenverdieping mooi uit te lijnen en regels te plaatsen zodat hier later de gipsplaaten tegenaan 
+        geschroefd kunnen worden. het was een mooie dag dus we hebben voor het eerst een sprong in het zwembad gemaakt. Lotte en Ilse al dobberend in een 
+        zwemband. </p>
+      <p>Aan het eind van de middag waren we uitgenodigd voor een bijeenkomst van het Waterschap. Er zijn plannen om het waterpijl bij ons in de omgeving 
+        te verhogen en daar wilden ze ons over informeren. Een goede gelegenheid om de mensen in onze direkte omgeving te leren kennen.</p>
+       
+      <p>Morgen komt er iemand om de keuken uit te bouwen. Hierna zal het er weer anders uitzien. </p>
+    </div>      
+    <div class="card">
       <h2>Plaatsing Dakkapel</h2>
       <h5>11 Augustus, 2021</h5>
 	    <img src="./image/20210811_075312_web.jpg" alt="" style="width:400;height:300px;">
