Update zondag 15 Augustus

--- a/index.html
+++ b/index.html
@@ -85,6 +85,32 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
+       <h2>De Keuken en de grasmat</h2>
+       <h5>15 Augustus, 2021</h5>
+       <img src="./image/20210813_160613_web.jpg" alt="" style="width:400;height:300px;">
+       <img src="./image/20210813_160544_web.jpg" alt="" style="width:400;height:300px;">
+       <p>Afgelopen vrijdag zou onze keuken dus uitgebouwd en opgehaald worden door Rohit, een handelaar in 2ehands keukens. Helaas bij aankomst bleek dat de 
+         keuken toch te gedateerd was en het voor hem niet haalbaar was de keuken er fatsoenlijk uit te halen, weer op te knappen en er ook nog wat aan te 
+         verdienen. De oven heeft hij meegenomen en ons geholpen de waterleidingen af te doppen. 
+         Voor iedereen die een iets betere keuken kwijt wil, hier een link naar de 
+         <a href="https://www.facebook.com/rohit.schonewille.3" target="_blank"> facebook pagina van Rohit.</a> Lees hier ook
+         <a href="https://hoogeveenschecourant.nl/hoogeveen/Ik-fantaseerde-dat-ik-mijn-moeder-zag-en-ze-door-mijn-haren-zou-strelen-26377334.html" target="_blank"> zijn indrukwekkende levensverhaal.</a> </p>  
+      <p>Uiteindelijk hebben we met z'n tweeen de keuken eruitgesloopt. Het werkblad was loeizwaar maar onze timmerman Rein wilde wel even een helpende hand toesteken. 
+      De tweede container zit nu vol. Maandag maar een derde bestellen. 
+      </p>
+
+       <p>Zaterdag een rustig dagje. We hebben een nieuwe vloer uitgezocht voor in de studeerkamer (een deel van het huishouden noemt dit de "man cave").
+       Hierna dan voor de eerste keer gras gemaaid. We moesten toch even terug denken aan de 
+       <a href="https://www.youtube.com/watch?v=t5pPRwr6afw" target="_blank"> hilarische sketch van Koot en Bie.</a> 
+       Ik moet nog even wat algoritmes loslaten want de route moet iets efficienter kunnen</p>
+       <img src="./image/Screenshot_20210815-132647_Strava.jpg" alt="" style="width:400;height:300px;">       
+       <img src="./image/20210814_131155_web.jpg" alt="" style="width:400;height:300px;">       
+       <p>De komende week gaan de timmerlieden verder met het aftimmeren van de bovenverdieping. De electricien zal komen om de meterkast 
+         een update te geven en al het nodige aan te leggen voor de keuken en badkamer.</p>
+    </div>     
+
+
+    <div class="card">
       <h2>Opening van het zwembad</h2>
       <h5>12 Augustus, 2021</h5>
 	    <img src="./image/20210812_150146_web.jpg" alt="" style="width:400;height:300px;">
