--- a/index.html
+++ b/index.html
@@ -85,6 +85,30 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
+      <h2>De opbouw is begonnen</h2>
+      <h5>21 Augustus, 2021</h5>
+      <img src="./image/20210820_171743_web.jpg" alt="" style="width:400;height:300px;">
+      <img src="./image/20210820_171806_web.jpg" alt="" style="width:400;height:300px;">
+      <p>
+         De eerste dagen stonden in het teken van afbraak en uitruimen maar nu is de wederopbouw langzaam zichtbaar. Doordat alle draagbalken krom zijn 
+         en de muren ook niet echt haaks ging er veel werk zitten in het stroken van de latten waaraan het gips dan geschroefd wordt. 
+         Op de eerste slaapkamer zijn de timmerlieden al begonnen. De komende week komen de electricien en loodgieter om nieuwe leidingen achter 
+         de knieschotten te leggen zodat deze daarna ook met gips bekleed kunnen worden.
+         De stukadoor zal er daarna een mooi glad wandje van maken.
+     </p>
+     <img src="./image/20210815_163449_web.jpg" alt="" style="width:400;height:300px;">
+     <img src="./image/20210815_160425_web.jpg" alt="" style="width:400;height:300px;">
+     <p>Vorige week zondag hebben we in onze nieuwe buurt een ommetje gelopen. Vlak achter ons huis begint een mooi stuk natuurgebied. Vele wandel en 
+       fietspaden en hier en daar los lopende runderen. </p>
+     <a href="https://www.landvancuijk.nl/toerisme-en-recreatie/verborgen-raamvallei" target="_blank"> De verborgen Raamvallei.</a>
+   </div>     
+
+
+
+
+
+
+    <div class="card">
        <h2>De Keuken en de grasmat</h2>
        <h5>15 Augustus, 2021</h5>
        <img src="./image/20210813_160613_web.jpg" alt="" style="width:400;height:300px;">
