--- a/index.html
+++ b/index.html
@@ -87,6 +87,30 @@ body {
 
     <div class="card">
         <div class="card">
+            <h2>Het stukwerk is nu droog!</h2>
+            <h5>22 September, 2021</h5>
+            <img src="./image/20210918_153110_web.jpg" alt="" style="width:400;height:300px;">
+            <img src="./image/20210918_153321_web.jpg" alt="" style="width:400;height:300px;">
+            <p>
+              1e foto: onze slaapkamer, 2e foto: de keuken (alleen de keuken nog :-) <p>
+      
+              </p> 
+              Het stukwerk zit erop, zowel boven als in de keuken. Het ziet er weer wat meer bewoonbaar uit. We hebben de hele vloer in de hal, keuken en naar
+              de garage schoongemaakt en nu ziet het er echt een stuk beter uit. Verder gaat de schilder morgen beginnen met schilderen en komt volgende week de keuken!
+              Wel weten we nu dat de vloer in de woonkamer en de werkkamer vervangen moet worden. Dat is nog wel een gedoe, omdat er dan gedurende een periode van 9 dagen
+              of 28 dagen (afhankelijk wie je vraagt.....) nog geen tegels of PVC op mag. Tja, nu nog beslissen wie het gaat doen en wanneer. Een tegelzetter was ook nog niet
+              zo makkelijk te vinden, maar dat is in principe gelukt. Blijft de vraag: wat gaan we precies doen met de vloer voordat de tegels erop kunnen.
+              In elk geval worden de meubels uit de woonkamer voor een aantal weken opgeslagen. Dus het wordt leven op beton als we zijn verhuisd. Gezellig! Maar goed,
+              dan is het ook klaar en hebben we ongeveer het hele huis vervangen.
+           </p>
+           <img src="./image/20210918_153140_web.jpg" alt="" style="width:400;height:300px;">
+           <img src="./image/20210918_153153_web.jpg" alt="" style="width:400;height:300px;">
+           <p>1e foto: slaapkamer Lotte, 2e foto: kamer Yris. Alles gestuct en droger dan op de foto's. De hele week met drogers.
+           </p>
+           
+         </div>  
+
+        <div class="card">
             <h2>De badkamer en stucwerk 2: we zijn er bijna.....</h2>
             <h5>12 September, 2021</h5>
             <img src="./image/20210911_124934 web.jpg" alt="" style="width:400;height:300px;">
