--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
 
     <div class="card">
         <div class="card">
-            <h2>Het stukwerk is nu droog!</h2>
+            <h2>Het stucwerk is nu droog!</h2>
             <h5>22 September, 2021</h5>
             <img src="./image/20210918_153110_web.jpg" alt="" style="width:400;height:300px;">
             <img src="./image/20210918_153321_web.jpg" alt="" style="width:400;height:300px;">
