--- a/index.html
+++ b/index.html
@@ -85,6 +85,30 @@ body {
 <div class="row">
   <div class="leftcolumn">
 
+
+    <div class="card">
+      <div class="card">
+        <h2>De eerste fase verbouwing is klaar door naar fase 2</h2>
+        <h5>18 oktober, 2021</h5>
+        <p>De verhuizing van Malden naar Escharen met professionele verhuizers nam 4 dagen in beslag. We hadden zelf al veel dozen gepakt en we zijn de 
+          laatste weken nooit met een lege auto naar ons nieuwe huis gereden. Toch waren de mannen 3 dagen druk met inpakken en 1 dag met uitpakken. 
+          De spullen uit de woonkamer gaan een paar weken in de opslag maar de spullen uit de keuken, slaapkamers en zolder hebben (grotendeels) weer een plekje gevonden. </p>
+        <img src="./image/okt 2021/20211015_110134_web.jpg" alt="" style="width:400;height:300px;">
+        <img src="./image/okt 2021/20211017_101731_web.jpg" alt="" style="width:400;height:300px;">
+        <img src="./image/okt 2021/20211017_101059_web.jpg" alt="" style="width:400;height:300px;">
+        <img src="./image/okt 2021/20211017_101211_web.jpg" alt="" style="width:400;height:300px;">
+        <p>De houten vloer in de woonkamer was aan renovatie toe en het beton eronder in zeer slechte staat. Het is een betonvloer meteen op het zand 
+          waardoor het altijd vochtig is. We hebben dus besloten de hele vloer in de woonkamer en in de werkkamer ernaast er uit te breken. Er komt 
+          dan een dikke isolatie laag te liggen met daar boven beton en dan leggen we ook meteen vloerverwarming. Wel een spannend moment als ze met een kraan 
+          naar binnen rijden en in je nieuwe huis gaan staan hakken. Het ruige werk zal 3-4 dagen duren en daarna begint de opbouw van de vloer. 
+          Het beton en de deklaag zullen een paar weken moeten drogen dus zolang leven we in de keuken en op onze slaapkamer. 
+       </p> 
+       <img src="./image/okt 2021/20211017_101639_web.jpg" alt="" style="width:400;height:300px;">
+       <img src="./image/okt 2021/20211017_101627_web.jpg" alt="" style="width:400;height:300px;">
+       <img src="./image/okt 2021/20211018_150734_web.jpg" alt="" style="width:400;height:300px;">
+       
+     </div>  
+      
     <div class="card">
       <div class="card">
         <h2>En we hebben weer een keuken en een badkamer (bijna)</h2>
